--- a/imr.cfg.sample
+++ b/imr.cfg.sample
@@ -1,4 +1,18 @@
 #监听地址 ip:port ip一般使用内网网卡地址
 listen=:4444
-redis_address=192.168.33.10:6379
+
+#mysql的链接地址  用户名:密码@tcp(服务器地址:服务器端口)/数据库名称
+mysqldb_source=root:123456@tcp(127.0.0.1:3306)/im
+
+#mssql的链接地址 服务地址 端口 用户名 密码 数据库名称
+mssqldb_source= server=127.0.0.1;port=1433;user id=im;password=im;database=im
+
+
+#redis服务器地址  服务器地址:服务器端口
+redis_address=127.0.0.1:6379
+redis_password=
+redis_db=0
+
+#是否推送系统消息
+is_push_system=1
 
