--- a/ims.cfg.sample
+++ b/ims.cfg.sample
@@ -1,14 +1,31 @@
 #监听地址 ip:port ip一般选择内网网卡的地址
 listen=:3333
-#消息存储路径，必须存在
+rpc_listen=:13333
+
+#消息存储路径 必须存在
 storage_root=/tmp/im
 #备份监听地址 ip:port, ip一般选择内网网卡的地址
 sync_listen=:3334
 
-#主机监听地址，备机需要此配置
+#主机监听地址 备机需要此配置
 #master_address=:3334
 
 #mysql的链接地址  用户名:密码@tcp(服务器地址:服务器端口)/数据库名称
 mysqldb_source=root:123456@tcp(127.0.0.1:3306)/im
-#redis服务器地址  服务器ip：服务器端口
+
+#mssql的链接地址 服务地址 端口 用户名 密码 数据库名称
+mssqldb_source= server=127.0.0.1;port=1433;user id=im;password=im;database=im
+
+
+#redis服务器地址  服务器地址:服务器端口
 redis_address=127.0.0.1:6379
+redis_password=
+redis_db=0
+
+#客服的appid
+kefu_appid=0
+
+
+
+
+
